--- a/interface/package.json
+++ b/interface/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dalle-playground",
+  "name": "Imagen-playground",
   "homepage": "https://saharmor.github.io/dalle-playground",
   "version": "0.0.0",
   "private": false,
